[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myst-theme-renderer"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Angus Hollands/myst-theme-renderer#readme"
Issues = "https://github.com/Angus Hollands/myst-theme-renderer/issues"
Source = "https://github.com/Angus Hollands/myst-theme-renderer"

[tool.hatch.version]
path = "src/myst_theme_renderer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/myst_theme_renderer tests}"

[tool.coverage.run]
source_pkgs = ["myst_theme_renderer", "tests"]
branch = true
parallel = true
omit = [
  "src/myst_theme_renderer/__about__.py",
]

[tool.coverage.paths]
myst_theme_renderer = ["src/myst_theme_renderer", "*/myst-theme-renderer/src/myst_theme_renderer"]
tests = ["tests", "*/myst-theme-renderer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
