[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-book-site-renderer"
dynamic = ["version"]
description = 'Render MyST AST into HTML using a MyST template'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp",
    "traitlets",
    "ruamel.yaml",
    "jupyter-book",
    "psutil"
]

[project.urls]
Documentation = "https://github.com/agoose77/jupyter-book-site-renderer#readme"
Issues = "https://github.com/agoose77/jupyter-book-site-renderer/issues"
Source = "https://github.com/agoose77/jupyter-book-site-renderer"

[tool.hatch.version]
path = "src/jupyter_book_site_renderer/__about__.py"

